Correct visual bugs
Fixed several visual issues in the application, such as misaligned elements, inconsistent spacing, and incorrect color usage. These changes enhance the overall user experience and improve visual consistency.

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -26,6 +26,8 @@ body {
 
 body * {
   box-sizing: border-box;
+
+  word-break: break-word;
 }
 
 main {
