--- a/src/assets/scss/components/text-with-icon/text-with-icon.scss
+++ b/src/assets/scss/components/text-with-icon/text-with-icon.scss
@@ -16,6 +16,18 @@
     display: flex;
   }
 
+  &__text {
+    &--size {
+      &-normal {
+        @include text-normal($font-weight-regular);
+      }
+
+      &-small {
+        @include text-small($font-weight-regular);
+      }
+    }
+  }
+  
   &__icon + &__text,
   &__text + &__icon {
     margin-left: rem($gap-little);
